--- a/src/main/resources/client/views/MainPage.fxml
+++ b/src/main/resources/client/views/MainPage.fxml
@@ -5,10 +5,15 @@
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import com.tavern.client.components.MainSidebar ?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
+<BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.tavern.client.views.MainPage"
-            prefHeight="400.0" prefWidth="600.0">
+            >
 
-</AnchorPane>
+    <left>
+        <MainSidebar fx:id="sidebar"/>
+    </left>
+
+</BorderPane>
