--- a/src/main/resources/client/components/MainSidebar.fxml
+++ b/src/main/resources/client/components/MainSidebar.fxml
@@ -6,9 +6,18 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.tavern.client.components.MainSidebar"
-            prefHeight="400.0" prefWidth="600.0">
+<?import javafx.geometry.Insets?>
+<fx:root type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx"
+         xmlns:fx="http://javafx.com/fxml"
+>
 
-</AnchorPane>
+    <ScrollPane fitToWidth="true" VBox.vgrow="ALWAYS"
+                style="-fx-background-color: transparent; -fx-background: -fx-surface-color; -fx-background-insets: 0; -fx-padding: 0;">
+        <VBox fx:id="roomsPanel" spacing="5" prefWidth="200" maxWidth="250">
+            <padding>
+                <Insets topRightBottomLeft="5"/>
+            </padding>
+        </VBox>
+    </ScrollPane>
+
+</fx:root>
