--- a/src/main/resources/client/views/LoginPage.fxml
+++ b/src/main/resources/client/views/LoginPage.fxml
@@ -29,7 +29,7 @@
             <padding>
                 <Insets top="20" bottom="20" />
             </padding>
-            <TextField fx:id="input"/>
+            <TextField text="dio" fx:id="input"/>
             <Button text="Login" maxWidth="Infinity" onAction="#handleLogin"/>
             <Hyperlink text="Signup" maxWidth="Infinity" onAction="#handleSignupSwitch"/>
         </VBox>
