--- a/src/main/resources/client/themes/material-theme.css
+++ b/src/main/resources/client/themes/material-theme.css
@@ -44,7 +44,7 @@
 /* Apply background color to the root node (the scene background) */
 /* Using the renamed background variable to avoid ambiguity */
 
-.label, .button, .text-field, .password-field, .hyperlink, .check-box {
+.label, Button, .text-field, .password-field, .hyperlink, .check-box {
     -fx-font-family: "FiraCode Nerd Font Propo", sans-serif;
     -fx-font-size: 18px;
     -fx-text-fill: -fx-on-background-color;
@@ -73,7 +73,7 @@ root, BorderPane {
 }
 
 /* Basic Button Styles */
-.button {
+Button {
     -fx-background-color: -fx-primary-color; /* Button background color */
     -fx-text-fill: -fx-on-primary-color; /* Button text color */
     -fx-padding: 10px;
@@ -82,7 +82,7 @@ root, BorderPane {
     -fx-cursor: HAND;
 }
 
-.button:hover {
+Button:hover {
     -fx-background-color: derive(-fx-primary-color, 25%);
 }
 
