Updated Sidebar to take Direct Message button

--- a/src/main/resources/client/components/MainSidebar.fxml
+++ b/src/main/resources/client/components/MainSidebar.fxml
@@ -11,11 +11,11 @@
          xmlns:fx="http://javafx.com/fxml"
 >
 
-    <ScrollPane fitToWidth="true" VBox.vgrow="ALWAYS"
+    <ScrollPane fx:id="scrollPane" fitToWidth="true" VBox.vgrow="ALWAYS"
                 style="-fx-background-color: transparent; -fx-background: -fx-surface-color; -fx-background-insets: 0; -fx-padding: 0;">
         <VBox fx:id="roomsPanel" spacing="5" minWidth="40">
             <padding>
-                <Insets topRightBottomLeft="5"/>
+                <Insets bottom="5" left="5" right="5" />
             </padding>
         </VBox>
     </ScrollPane>
