--- a/src/main/resources/client/themes/material-theme.css
+++ b/src/main/resources/client/themes/material-theme.css
@@ -44,8 +44,8 @@
 /* Apply background color to the root node (the scene background) */
 /* Using the renamed background variable to avoid ambiguity */
 
-Label, Button, .text-field, .password-field, Hyperlink, .check-box {
-    -fx-font-family: "FiraCode Nerd Font Propo", sans-serif;
+Label, Button, TextField, PasswordField, Hyperlink {
+    -fx-font-family: "FiraCode Nerd Font", sans-serif;
     -fx-font-size: 18px;
     -fx-text-fill: -fx-on-background-color;
 }
@@ -76,7 +76,7 @@ Button:hover {
 }
 
 /* Basic TextField and PasswordField Styles */
-.text-field, .password-field {
+TextField, PasswordField {
     -fx-background-color: -fx-background-color-theme; /* Background for input fields */
     -fx-text-fill: -fx-on-background-color; /* Text color in input fields */
     -fx-prompt-text-fill: derive(-fx-on-background-color, 50%); /* Lighter color for prompt text */
