Created first rendition of the message list and chat area

--- a/src/main/resources/client/themes/tavern-dark-theme.css
+++ b/src/main/resources/client/themes/tavern-dark-theme.css
@@ -162,6 +162,12 @@ Separator {
     -fx-background-color: derive(-fx-tertiary-color, 15%);
 }
 
+ScrollPane {
+    -fx-background-color: transparent;
+    -fx-background-insets: 0;
+    -fx-padding: 0;
+}
+
 /* Table styling - like tavern menus or ledgers */
 TableView {
     -fx-background-color: -fx-surface-color;
