--- a/src/main/resources/client/views/MainPage.fxml
+++ b/src/main/resources/client/views/MainPage.fxml
@@ -11,6 +11,7 @@
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.tavern.client.views.MainPage"
+            fx:id="root"
             >
 
     <top>
