--- a/src/main/resources/client/themes/tavern-dark-theme.css
+++ b/src/main/resources/client/themes/tavern-dark-theme.css
@@ -42,7 +42,7 @@ root, BorderPane {
 /* Text styling for all common elements */
 Label, Button, TextField, PasswordField, Hyperlink {
     -fx-font-family: "FiraCode Nerd Font", serif;
-    -fx-font-size: 18px;
+    -fx-font-size: 14px;
     -fx-text-fill: -fx-on-background-color;
 }
 
@@ -58,7 +58,7 @@ Label.title {
 Button {
     -fx-background-color: -fx-tertiary-color;
     -fx-text-fill: -fx-on-tertiary-color;
-    -fx-padding: 10px;
+    -fx-padding: 8px 10px 8px 10px;
     -fx-background-radius: 5px;
     -fx-border-radius: 5px;
     -fx-cursor: HAND;
