--- a/src/main/resources/client/components/RoomPane.fxml
+++ b/src/main/resources/client/components/RoomPane.fxml
@@ -13,4 +13,8 @@
     <center>
         <fx:include fx:id="chatPane" source="ChatPane.fxml" />
     </center>
+
+    <right>
+        <fx:include fx:id="userSidebar" source="RoomUsersSidebar.fxml" />
+    </right>
 </fx:root>
