added proper cleaning to direct messages components

--- a/src/main/resources/client/components/DirectMessagesPane.fxml
+++ b/src/main/resources/client/components/DirectMessagesPane.fxml
@@ -13,11 +13,11 @@
             >
 
     <left>
-        <DirectUserSidebar />
+        <DirectUserSidebar fx:id="userSidebar" />
     </left>
 
     <center>
-        <DirectMessagePane />
+        <DirectMessagePane fx:id="messagePane" />
     </center>
 
 </fx:root>
