--- a/src/main/resources/client/components/MainSidebar.fxml
+++ b/src/main/resources/client/components/MainSidebar.fxml
@@ -9,16 +9,6 @@
 <?import javafx.geometry.Insets?>
 <fx:root type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx"
          xmlns:fx="http://javafx.com/fxml"
-         styleClass="panel"
 >
-
-    <ScrollPane fx:id="scrollPane" fitToWidth="true" VBox.vgrow="ALWAYS"
-                style="-fx-background-color: transparent; -fx-background: -fx-surface-variant-color; -fx-background-insets: 0; -fx-padding: 0;">
-        <VBox fx:id="roomsPanel" spacing="5">
-            <padding>
-                <Insets bottom="5" left="5" right="5" />
-            </padding>
-        </VBox>
-    </ScrollPane>
-
+    <ListView styleClass="panel" prefWidth="60" fx:id="roomsList" VBox.vgrow="ALWAYS" />
 </fx:root>
